new/rabbitmq-server-nodes-svc.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    rabbitmq.com/queueRebalanceNeededAt: "2024-09-22T14:39:52Z"
  labels:
    app.kubernetes.io/component: rabbitmq
    app.kubernetes.io/name: import-definitions
    app.kubernetes.io/part-of: rabbitmq
  name: import-definitions-nodes
spec:
  clusterIP: None
  clusterIPs:
  - None
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: epmd
    port: 4369
    protocol: TCP
    targetPort: 4369
  - name: cluster-rpc
    port: 25672
    protocol: TCP
    targetPort: 25672
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/name: import-definitions
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
